2002-01-21  Akim Demaille  <akim@epita.fr>

	* lib/Autom4te/General.pm (getopt): Use a more GNUish error
	message on invalid options.
	* bin/autom4te.in (parse_args): Don't use
	Autoconf::General::getopt with non valid options.

2002-01-17  Jim Meyering  <meyering@lucent.com>

	* lib/autoconf/lang.m4 (_AC_COMPILER_EXEEXT_DEFAULT): Initialize
	$ac_cv_exeext so we don't use an old, invalid, cached value.

2002-01-11  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/functions.m4 (AC_FUNC_STRNLEN): New, from Jim
	Meyering.
	* doc/autoconf.texi (Function Portability): Document the strnlen
	limitation.
	(Particular Functions): Document AC_FUNC_STRNLEN.
	* lib/autoscan/functions: Adjust.

2002-01-06  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/autotest.m4 (AC_CONFIG_TESTDIR): Don't create
	package.m4, since is really depends upon configure.ac, not
	configure.
	* doc/autoconf.texi (testsuite Scripts): Adjust.
	* tests/Makefile.am (package.m4): New.
	EXTRA_DIST it since its a source.


2002-01-06  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/general.m4 (_AC_INIT_PARSE_ARGS): Move the AC_SUBST
	of PACKAGE_NAME, PACKAGE_TARNAME, PACKAGE_VERSION, PACKAGE_STRING,
	and PACKAGE_BUGREPORT from here...
	(_AC_INIT_DEFAULTS): to here, since it is unrelated to the
	arguments.
	(_AC_INIT_PREPARE): AC_DEFINE these symbols.
	* lib/autotest/general.m4: Use AT_PACKAGE_*, not PACKAGE_*.
	(AT_INIT): No longer catch `^PACKAGE_(BUGREPORT|STRING)$'.
	* tests/tools.at (autoheader): Adjust.
	* tests/atspecific.m4 (AT_CHECK_DEFINES): Adjust.


2002-01-06  Akim Demaille  <akim@epita.fr>

	* bin/autoscan.in (scan_file): Use `&used'.

2002-01-03  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Output): Improved wording regarding use of
	AC_OUTPUT.
	From Olly Betts.

2001-12-18  Kevin Ryde  <user42@zip.com.au>

	* doc/autoconf.texi (Function Portability): Add notes on sscanf
	sometimes needing writable input.

2001-12-17  Jim Meyering  <meyering@lucent.com>
