@@ -1,5 +1,9 @@
 2002-01-21  Akim Demaille  <akim@epita.fr>
 
+	* lib/autoconf/functions.m4 (AC_FUNC_MMAP): #Undef malloc.
+
+2002-01-21  Akim Demaille  <akim@epita.fr>
+
 	* lib/Autom4te/General.pm (getopt): Use a more GNUish error
 	message on invalid options.
 	* bin/autom4te.in (parse_args): Don't use
